--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "babel-node app.js",
-    "nodemon": "nodemon --exec 'npm run lint && npm start'",
+    "start": "NODE_ENV=production babel-node app.js",
+    "nodemon": "nodemon --exec 'npm run lint && babel-node app.js'",
+    "lint": "eslint app.js",
     "startreact": "react-scripts start",
     "build": "react-scripts build",
     "testreact": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "devbuild": "webpack --config ./config/webpack.config.dev.js --progress --colors"
   },
   "author": "",
   "license": "ISC",
@@ -26,21 +27,20 @@
     "create-react-app": "^1.4.3",
     "eslint": "^4.12.1",
     "eslint-config-google": "^0.9.1",
+    "html-webpack-plugin": "^2.28.0",
+    "nodemon": "1.14.7",
+    "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "axios": "^0.17.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa2-cors": "^2.0.5",
-    "mongodb": "^2.2.33",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "webpack": "^3.10.0"
-  },
-  "dependencies": {
-    "axios": "^0.17.1",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.0",
+    "mongodb": "^2.2.33",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
